# commerce-docs-demo-environment

./: .env.demo  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.json  config.json.bak  config.template.json  coveo-loader  coveo-loader.py  coveo_catalog_tool.py  index.html  pdp.html  plp-golf.html  plp-hockey.html  plp-shoes.html  pyproject.toml  requirements.txt  setup.py  update_html_tokens.py
.github/workflows/: deploy-images.yml
commerce-docs-demo-environment/Listing pages/: golf-plp.html  hockey-plp.html  shoes-plp.html
commerce-docs-demo-environment/Search page/: search-page.html
commerce-docs-demo-environment/Test payloads/: full-product-payload-sample.json
config/: coveo-config.json
coveo-env/: pyvenv.cfg
data/: add-dictionary-field.json  catalog-schema.json  complete-product-payload.json  full-product-payload-sample.json  new-availability.json  partial-update-template.json  product-data-template.json  sample-partial-updates.json  update-operation-template.json  v2-payload.json
docs/: api.md  getting-started.md  image-hosting.md  troubleshooting.md
examples/: golf-plp.html  hockey-plp.html  shoes-plp.html
scripts/: full_catalog_update.py  monitor_operations.py  partial_catalog_update.py  setup-secure.sh  setup.sh  start_demo_server.py  traffic_simulator_api.py  update-image-urls.py  update_document_ids.py
src/: __init__.py  coveo_utils.py  loader.py
tools/data_loader/: loader.py
website/js/: cart.js  coveo-analytics.js
website/pages/: cart.html  debug-test.html  index.html  pdp.html  plp-golf.html  plp-hockey.html  plp-shoes.html  product-detail-simple.html  product-detail.html  product.html  simple-plp-adidas.html  simple-plp-dooney-bourke.html  simple-plp-ecco.html  simple-plp-golf.html  simple-plp-hockey.html  simple-plp-nike.html  simple-plp-shoes.html  simple-plp-steve-madden.html  simple-search.html  test.html
website/styles/: main.css
